# control_center

./: .gitignore
c2-platform/: README.md  pyproject.toml  requirements.txt
c2-platform/docs/: ship-platform-api.md
c2-platform/src/: main.py
c2-platform/src/c2/: __init__.py  api.py  config.py  dispatcher.py  enc_tiles.py  models.py
c2-platform/src/c2/templates/: index.html
c2-platform/src/c2_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
c2-platform/var/: config.yml
